# Rust-Web-Scraper-

./: .gitignore  Cargo.toml  README.md  html_output.csv
src/: main.rs
