[package]
name = "Rust-Web-Scraper-"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking"] }
scraper = "0.12"
tokio = { version = "1", features = ["full"] }
csv = "1.1"